Sys.out.println comment

--- a/Delaunay/src/Delaunay/GUI.form
+++ b/Delaunay/src/Delaunay/GUI.form
@@ -26,24 +26,23 @@
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="pointsButton" pref="157" max="32767" attributes="0"/>
-                  <Component id="pointCountField" alignment="0" max="32767" attributes="0"/>
-                  <Component id="expositionButton" alignment="0" max="32767" attributes="0"/>
-                  <Component id="benchmarkButton" alignment="0" max="32767" attributes="0"/>
+                  <Component id="benchmarkButton" alignment="0" min="-2" pref="157" max="-2" attributes="0"/>
+                  <Component id="slopeButton1" alignment="0" min="-2" pref="157" max="-2" attributes="0"/>
+                  <Component id="expositionButton" alignment="0" min="-2" pref="157" max="-2" attributes="0"/>
+                  <Component id="contoursButton" alignment="0" min="-2" pref="157" max="-2" attributes="0"/>
+                  <Component id="delaunayButton1" alignment="0" min="-2" pref="157" max="-2" attributes="0"/>
+                  <Component id="pointCountField" alignment="0" min="-2" pref="157" max="-2" attributes="0"/>
+                  <Component id="pointsButton" min="-2" pref="157" max="-2" attributes="0"/>
                   <Group type="102" attributes="0">
                       <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="zivField" min="-2" pref="57" max="-2" attributes="0"/>
-                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
-                  <Component id="contoursButton" alignment="0" max="32767" attributes="0"/>
-                  <Component id="delaunayButton1" alignment="0" max="32767" attributes="0"/>
-                  <Component id="gridButton" alignment="1" max="32767" attributes="0"/>
-                  <Component id="slopeButton1" alignment="0" max="32767" attributes="0"/>
+                  <Component id="gridButton" alignment="0" min="-2" pref="157" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="drawPanel1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
+              <Component id="drawPanel1" max="32767" attributes="0"/>
+              <EmptySpace min="-2" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -71,9 +70,9 @@
                       <Component id="contoursButton" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="expositionButton" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
                       <Component id="gridButton" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="slopeButton1" min="-2" max="-2" attributes="0"/>
                       <EmptySpace pref="88" max="32767" attributes="0"/>
                       <Component id="benchmarkButton" min="-2" max="-2" attributes="0"/>
