--- a/Delaunay/src/Delaunay/GUI.form
+++ b/Delaunay/src/Delaunay/GUI.form
@@ -24,21 +24,26 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
-              <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="benchmarkButton" alignment="0" min="-2" pref="157" max="-2" attributes="0"/>
-                  <Component id="slopeButton1" alignment="0" min="-2" pref="157" max="-2" attributes="0"/>
-                  <Component id="expositionButton" alignment="0" min="-2" pref="157" max="-2" attributes="0"/>
-                  <Component id="contoursButton" alignment="0" min="-2" pref="157" max="-2" attributes="0"/>
-                  <Component id="delaunayButton1" alignment="0" min="-2" pref="157" max="-2" attributes="0"/>
-                  <Component id="pointCountField" alignment="0" min="-2" pref="157" max="-2" attributes="0"/>
-                  <Component id="pointsButton" min="-2" pref="157" max="-2" attributes="0"/>
+                  <Component id="hillButton" alignment="0" min="-2" pref="157" max="-2" attributes="0"/>
                   <Group type="102" attributes="0">
-                      <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="zivField" min="-2" pref="57" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="slopeButton1" alignment="0" min="-2" pref="157" max="-2" attributes="0"/>
+                          <Component id="expositionButton" alignment="0" min="-2" pref="157" max="-2" attributes="0"/>
+                          <Component id="contoursButton" alignment="0" min="-2" pref="157" max="-2" attributes="0"/>
+                          <Component id="delaunayButton1" alignment="0" min="-2" pref="157" max="-2" attributes="0"/>
+                          <Component id="pointCountField" alignment="0" min="-2" pref="157" max="-2" attributes="0"/>
+                          <Component id="pointsButton" min="-2" pref="157" max="-2" attributes="0"/>
+                          <Group type="102" attributes="0">
+                              <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                              <Component id="zivField" min="-2" pref="57" max="-2" attributes="0"/>
+                          </Group>
+                          <Component id="valleyButton1" alignment="0" min="-2" pref="157" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
-                  <Component id="gridButton" alignment="0" min="-2" pref="157" max="-2" attributes="0"/>
+                  <Component id="gridButton1" min="-2" pref="157" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="drawPanel1" max="32767" attributes="0"/>
@@ -51,10 +56,7 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="0" attributes="0">
-                      <Component id="drawPanel1" max="32767" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                  </Group>
+                  <Component id="drawPanel1" alignment="0" max="32767" attributes="0"/>
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="pointCountField" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
@@ -70,15 +72,18 @@
                       <Component id="contoursButton" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="expositionButton" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
-                      <Component id="gridButton" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="slopeButton1" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="88" max="32767" attributes="0"/>
-                      <Component id="benchmarkButton" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="210" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
+                      <Component id="gridButton1" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="96" max="-2" attributes="0"/>
+                      <Component id="hillButton" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="valleyButton1" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="0" pref="138" max="32767" attributes="0"/>
                   </Group>
               </Group>
+              <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -123,14 +128,6 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="expositionButtonActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="benchmarkButton">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Benchmark"/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="benchmarkButtonActionPerformed"/>
-      </Events>
-    </Component>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
         <Property name="text" type="java.lang.String" value="ZIV = "/>
@@ -157,12 +154,12 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="delaunayButton1ActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="gridButton">
+    <Component class="javax.swing.JButton" name="hillButton">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Grid"/>
+        <Property name="text" type="java.lang.String" value="hill"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="gridButtonActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="hillButtonActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="slopeButton1">
@@ -171,6 +168,22 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="slopeButton1ActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="valleyButton1">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="valley"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="valleyButton1ActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="gridButton1">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="grid"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="gridButton1ActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
