--- a/Delaunay/src/Delaunay/GUI.form
+++ b/Delaunay/src/Delaunay/GUI.form
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+  <NonVisualComponents>
+    <Component class="javax.swing.ButtonGroup" name="buttonGroup1">
+    </Component>
+  </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
     <Property name="title" type="java.lang.String" value="Delaunay triangulation"/>
@@ -26,23 +30,28 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Group type="102" alignment="0" attributes="0">
-                      <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="zivField" min="-2" pref="57" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                      <Group type="102" alignment="0" attributes="0">
+                          <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                          <Component id="zivField" min="-2" pref="57" max="-2" attributes="0"/>
+                      </Group>
+                      <Component id="pointsButton" alignment="0" pref="157" max="32767" attributes="0"/>
+                      <Component id="hypsometry" alignment="0" max="32767" attributes="0"/>
+                      <Component id="slopeButton1" alignment="0" max="32767" attributes="0"/>
+                      <Component id="expositionButton" alignment="0" max="32767" attributes="0"/>
+                      <Component id="contoursButton" alignment="0" max="32767" attributes="0"/>
+                      <Component id="delaunayButton1" alignment="0" max="32767" attributes="0"/>
+                      <Component id="holeButton1" alignment="0" max="32767" attributes="0"/>
+                      <Component id="ridgeButton1" alignment="0" max="32767" attributes="0"/>
+                      <Component id="hillButton" alignment="0" pref="157" max="32767" attributes="0"/>
+                      <Component id="pointCountField" alignment="0" max="32767" attributes="0"/>
+                      <Component id="valleyButton2" max="32767" attributes="0"/>
                   </Group>
-                  <Component id="pointsButton" alignment="0" pref="157" max="32767" attributes="0"/>
-                  <Component id="hypsometry" alignment="0" max="32767" attributes="0"/>
-                  <Component id="slopeButton1" alignment="0" max="32767" attributes="0"/>
-                  <Component id="expositionButton" alignment="0" max="32767" attributes="0"/>
-                  <Component id="contoursButton" alignment="0" max="32767" attributes="0"/>
-                  <Component id="delaunayButton1" alignment="0" max="32767" attributes="0"/>
-                  <Component id="holeButton1" alignment="0" max="32767" attributes="0"/>
-                  <Component id="ridgeButton1" alignment="0" max="32767" attributes="0"/>
-                  <Component id="hillButton" alignment="0" pref="157" max="32767" attributes="0"/>
-                  <Component id="pointCountField" alignment="0" max="32767" attributes="0"/>
-                  <Component id="valleyButton2" max="32767" attributes="0"/>
+                  <Component id="jLabel2" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="bw" min="-2" max="-2" attributes="0"/>
+                  <Component id="colored" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="97" max="32767" attributes="0"/>
               <Component id="drawPanel1" max="32767" attributes="0"/>
@@ -81,7 +90,13 @@
                       <Component id="expositionButton" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="slopeButton1" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
+                      <Component id="bw" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Component id="colored" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
                       <Component id="hypsometry" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
@@ -167,7 +182,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="hypsometry">
       <Properties>
-        <Property name="text" type="java.lang.String" value="hypsometry"/>
+        <Property name="text" type="java.lang.String" value="Hypsometry"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="hypsometryActionPerformed"/>
@@ -203,6 +218,34 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="valleyButton2ActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JLabel" name="jLabel2">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Hypsometry color"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JRadioButton" name="bw">
+      <Properties>
+        <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
+          <ComponentRef name="buttonGroup1"/>
+        </Property>
+        <Property name="selected" type="boolean" value="true"/>
+        <Property name="text" type="java.lang.String" value="Black and White"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bwActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JRadioButton" name="colored">
+      <Properties>
+        <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
+          <ComponentRef name="buttonGroup1"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="Colored"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="coloredActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
